Project tempus {
    database_type: 'PostgreSQL'
}

Table "teams" {
  "id" bigserial [pk, increment]
  "name" varchar(255) [not null]
  "manager_id" bigint [default: null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [default: null]

Indexes {
  id
  manager_id
}
}

Table "users" {
  "id" bigserial [pk, increment]
  "role" varchar(64) [not null, default: 'employee']
  "username" varchar(255) [unique, not null]
  "email" varchar(255) [unique, not null]
  "name" varchar(255) [not null]
  "surname" varchar(255) [not null]
  "company_id" bigint [default: null]
  "password" varchar(255) [not null]
  "gender" varchar(255) [not null, default: `"unknown"`]
  "birth_date" date [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [default: null]
  "language" varchar(2) [not null, default: 'en', note: 'ISO-2 language code']
  "country" varchar(2) [default: null, note: 'ISO-2 Country code']
  "timezone" varchar(64) [not null, default: 'UTC', note: 'Timezone name']
  "manager_id" bigint [default: null]
  "team_id" bigint [default: null]

Indexes {
  email
  username
  manager_id
  team_id
}
}

Table "absences" {
  "id" bigserial [pk, increment]
  "user_id" bigint [not null]
  "start_time" timestamp [not null]
  "end_time" timestamp [default: null]
  "reason" varchar(255) [not null]
  "paid" boolean [not null, default: true]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [default: null]
  "approved_by_id" bigint [default: null]

Indexes {
  user_id
}
}

Table "entries" {
  "id" bigserial [pk, increment]
  "user_id" bigint [not null]
  "start_time" timestamp [not null]
  "end_time" timestamp [default: null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [default: null]

Indexes {
  user_id
}
}

Table "companies" {
  "id" BIGSERIAL [pk, increment]
  "name" varchar(255) [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [default: null]
}

Table "sessions" {
  "id" uuid [pk]
  "username" varchar [not null]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [not null]
  "is_blocked" boolean [not null]
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null, default: `now()`]
}

Ref:"users"."id" < "teams"."manager_id"

Ref:"users"."id" < "users"."manager_id"

Ref:"teams"."id" < "users"."team_id"

Ref:"users"."id" < "absences"."approved_by_id"

Ref:"companies"."id" < "users"."company_id"

Ref "user_entries":"users"."id" < "entries"."user_id" [delete: cascade]

Ref "user_absences":"users"."id" < "absences"."user_id" [delete: cascade]

Ref "user_sessions":"users"."username" < "sessions"."username" [delete: cascade]
